--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
     "expo": "~47.0.12",
+    "expo-av": "~13.0.2",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.1",
+    "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "expo-av": "~13.0.2"
+    "react-native-webview": "^11.26.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
