--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
+    "@reduxjs/toolkit": "^1.9.2",
     "expo": "~47.0.12",
     "expo-av": "~13.0.2",
     "expo-firebase-recaptcha": "^2.3.1",
@@ -25,6 +26,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-webview": "^11.26.1",
+    "react-redux": "^8.0.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
