--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-webview": "^11.26.1",
     "react-redux": "^8.0.5",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
