--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^5.3.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-webview": "^11.26.1",
     "react-redux": "^8.0.5",
-    "yup": "^0.32.11",
-    "react-native-maps": "1.3.2"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
