--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.2",
     "expo": "~47.0.12",
-    "expo-av": "~13.0.2",
+    "expo-av": "~13.0.3",
     "expo-firebase-recaptcha": "^2.3.1",
-    "expo-image-picker": "^14.1.1",
+    "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
@@ -29,7 +29,7 @@
     "react-native-paper": "^5.3.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-webview": "^11.26.1",
+    "react-native-webview": "11.23.1",
     "react-redux": "^8.0.5",
     "yup": "^0.32.11"
   },
