--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-webview": "11.23.1",
     "react-redux": "^8.0.5",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-dev-client": "~2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
