--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.4.0",
     "expo": "~47.0.12",
     "expo-av": "~13.0.3",
+    "expo-dev-client": "~2.0.1",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "^12.0.1",
@@ -31,8 +33,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-webview": "11.23.1",
     "react-redux": "^8.0.5",
-    "yup": "^0.32.11",
-    "expo-dev-client": "~2.0.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
