--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
     "@reduxjs/toolkit": "^1.9.2",
+    "@stripe/stripe-react-native": "^0.28.0",
     "axios": "^1.4.0",
     "expo": "~47.0.12",
     "expo-av": "~13.0.3",
@@ -26,6 +27,7 @@
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.3.1",
