--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-maps": "1.3.2",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.3.1",
+    "react-native-paper-dropdown": "^1.0.7",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-webview": "11.23.1",
